--- a/platformio.ini
+++ b/platformio.ini
@@ -10,23 +10,33 @@
 [platformio]
 env_default = lolin32
 
+[common_env_data]
+lib_deps_external = 1, 13, 64, 89, 551
+build_flags = -std=c++11 -std=gnu++11 -Wno-write-strings
+
 [env:nodemcu_32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-build_flags = -std=c++11 -std=gnu++11 -Wno-write-strings
-upload_port = /dev/ttyUSB0
+build_flags =
+    ${common_env_data.build_flags}
+lib_deps =
+    ${common_env_data.lib_deps_external}
 
 [env:lolin32]
 platform = espressif32
 board = lolin32
 framework = arduino
-build_flags = -std=c++11 -std=gnu++11 -Wno-write-strings
-upload_port = /dev/ttyUSB0
+build_flags =
+    ${common_env_data.build_flags}
+lib_deps =
+    ${common_env_data.lib_deps_external}
 
 [env:heltec_wifi_lora_32]
 platform = espressif32
 board = heltec_wifi_lora_32
 framework = arduino
-build_flags = -std=c++11 -std=gnu++11 -Wno-write-strings
-upload_port = /dev/ttyUSB0
+build_flags =
+    ${common_env_data.build_flags}
+lib_deps =
+    ${common_env_data.lib_deps_external}
