--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-env_default = lolin32
+env_default = nodemcu_32s
 
 [common_env_data]
 lib_deps_external = 1, 13, 64, 89, 551
